[gd_scene load_steps=2 format=3 uid="uid://welcome_back_scene"]

[ext_resource type="Script" path="res://WelcomeBackUI.gd" id="1"]

[node name="WelcomeBackUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Welcome Back!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TimeAwayLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "You were away for: X"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RewardsTitle" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Offline Rewards"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RewardsContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Spacer4" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ClaimButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Claim Rewards"
